# spec-agent-cli

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml
.agents/skills/spec-drift-sync/: SKILL.md
.agents/skills/spec-evolution/: SKILL.md
.agents/skills/spec-request-flow/: SKILL.md
.claude/skills/spec-request-flow/: SKILL.md
.github/workflows/: ci.yml  publish-pypi.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  styles.css  types.ts
dashboard/src/components/: AppHeader.tsx  DriftPanel.tsx  EvolutionPanel.tsx  ImplementationPanel.tsx  PacketTraceDiagram.tsx  Shared.tsx  SpecMapPanel.tsx
dashboard/src/hooks/: useCodePreview.ts  useWorkspace.ts
dashboard/src/lib/: format.ts
spec/: traceability.json
spec/evolution/: events.jsonl  timeline.md
spec/features/claude-code-discovery/: acceptance.md  spec.md
spec/features/cli-distribution/: acceptance.md  spec.md
spec/features/code-spec-traceability/: acceptance.md  spec.md
spec/features/feature-spec-packets/: acceptance.md  spec.md
spec/features/production-skill-hardening/: acceptance.md  spec.md
spec/packets/cli-distribution/: acceptance.md  spec.md
spec/packets/evolution-event-log/: acceptance.md  spec.md
spec/packets/feature-spec-packets/: spec.md
src/spec_agent/: __init__.py  __main__.py  cli.py  installer.py  package_assets.py  ui.py
tests/: test_agent_assets.py  test_cli.py  test_cli_installer.py  test_end_to_end.py  test_event_log.py  test_feature_scaffold.py  test_skill_workflows.py  test_spec_drift.py  test_timeline.py  test_ui.py
(+30 files in other folders)
