[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-agent-cli"
version = "0.4.3"
description = "A strict Spec Agent workflow for spec-driven development"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Spec Agent contributors" }]
keywords = ["ai-agent", "agent-skills", "spec", "spec-driven-development", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]
dependencies = ["typer>=0.12"]

[project.scripts]
spec-agent = "spec_agent.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/spec_agent"]

[tool.hatch.build.targets.wheel.force-include]
".agents/skills" = "spec_agent/resources/skills"
"AGENTS.md" = "spec_agent/resources/project-rules.md"

[tool.hatch.build.targets.sdist]
include = [
    "/.agents/skills",
    "/.claude/skills",
    "/src/spec_agent",
    "/dashboard",
    "/tests",
    "/AGENTS.md",
    "/CLAUDE.md",
    "/SPEC.md",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = [
    "/dashboard/node_modules",
]
